Update Blog "2020-10-11-vis"

--- a/src/pages/blog/2020-10-11-vis.md
+++ b/src/pages/blog/2020-10-11-vis.md
@@ -10,13 +10,15 @@ tags:
   - vis
   - islands
 ---
+![Old town Komiža ](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772411/vis/IMG_20200821_202010_npvk6o.jpg "Old town Komiža ")
+
 After a beautiful [5 days in Dubrovnik](https://www.brandonandchris.com/blog/2020-09-12-dubrovnik/), we drove back to Split and hopped on a ferry to the picturesque island of Vis.
 
 Fun fact: The film [Mamma Mia 2](https://www.imdb.com/title/tt6911608/) was filmed on Vis even though the story takes place on the same Greek island as the first movie.
 
 Our first stay was in a small apartment in the little town of Komiža, on the western coast of Vis. It was a modest accommodation but with a great view. Chris was also very taken with all the kittens roaming the alley behind the building (essentially a free [cat cafe](https://www.brandonandchris.com/blog/2019-12-13-cat-cafe-mocha-lounge-in-shibuya/)). She is now always prepared with cat treats in her purse.
 
-![chris feeding stray kittens in an alley](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772414/vis/IMG_20200821_202359_yuaxwm.jpg "Cat alley")
+![chris feeding stray kittens in an alley](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602799108/vis/IMG_20200821_202359_cnb7lo.jpg "Cat alley")
 
 ![scrambled eggs on a table on our balcony overlooking the ocean](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772442/vis/IMG_20200820_120333-EFFECTS_mt1k06.jpg "Eating breakfast Chris made us on our balcony")
 
@@ -30,8 +32,7 @@ The waters around Vis are beautifully shallow with a number of secluded hard to 
 
 
 
-
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772451/vis/IMG_20200821_125531_nt1tiy.jpg)
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772451/vis/IMG_20200821_125531_nt1tiy.jpg "Beautiful secluded beach only accessible by boat — we had nice lunch picnic here")
 
 Komiža has a fun little old town that was surprisingly bustling at night, where we tried some wine and of course gelato.
 
@@ -47,7 +48,7 @@ Walking around Vis it felt like a much more laid-back little town than Komiža. 
 
 ![toasting shots before a meal](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772410/vis/IMG_20200821_200200_v5iwhu.jpg "Very common to be given a shot of Grappa (brandy) before a meal")
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772420/vis/IMG_7727_lreolj.jpg)
+![]()
 
 Probably the most fun and unique experience had to be the quad ATV tour of the island we took. You follow a tour guide around the island to remote locations like former military bases and an abandoned bomb shelter - all while cruising up and down the hillside on ATVs. At each stop the guide explains the interesting history of the island — such as its strategic military importance. We highly recommend this tour if you ever find yourself on Vis.
 
@@ -55,16 +56,20 @@ Probably the most fun and unique experience had to be the quad ATV tour of the i
 
 ![chris and I standing in front of a heavy artillery cannon](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772412/vis/IMG_7656_eor2n1.jpg "A former military outpost")
 
-![chris and I standing at the hightest point on the island](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772465/vis/IMG_20200824_180709_picls2.jpg "A stunning view from the highest point of the island")
+![chris and I standing at the hightest point on the island](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602800137/vis/IMG_20200824_180709_thjmqq.jpg "A stunning view from the highest point of the island")
+
+![bomb shelter stairs](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602799104/vis/VID_20200824_183214_exported_154290_1602769062383-COLLAGE_kc1hn5.jpg "Exploring an abandonded atomic bomb shelter — a relic from the cold war. It's a long way to the top...")
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772476/vis/IMG_20200825_121032_p4pfvo.jpg "This cafe used to be a French fort")
 
 
-\[stop at Pritiscina beach]
+![Pritiscina beach selfie](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772426/vis/IMG_20200823_154405_dapj5k.jpg "Pritiscina beach — only easily accessible by boat or ATV")
 
 At the recommendation of our airbnb host, we made sure to have dinner at [Roki's](https://www.tripadvisor.com/Restaurant_Review-g424973-d4744235-Reviews-Roki_s-Vis_Island_of_Vis_Split_Dalmatia_County_Dalmatia.html) to try Peka. Peka is probably the most iconic dish from Croatia's Dalmatia region; lots of Dalmatian homes have large outdoor fireplaces where they cook it. It's essentially meat (we chose lamb) mixed with lots of vegetables and slow-cooked for several hours in a cast iron pot inside a stone fireplace.
 
 ![Lamb peka at Roki's](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772504/vis/IMG_20200825_205959_gtsrlh.jpg "Lamb peka at Roki's")
 
-![chris eyeing me suspiciously](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772501/vis/IMG_20200825_215437_f29qmh.jpg "Chris eyeing me suspiciously — maybe wondering where all her wine went...")
+![chris eyeing me suspiciously](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602799104/vis/IMG_20200825_215437_wi0cid.jpg "Chris eyeing me suspiciously — maybe wondering where all her wine went...")
 
 All in all, we had a great time on this charming little island with a surprising amount of history and friendly local peoples.
 
