Add video to post

--- a/src/pages/blog/2020-10-11-vis.md
+++ b/src/pages/blog/2020-10-11-vis.md
@@ -30,15 +30,13 @@ The waters around Vis are beautifully shallow with a number of secluded hard to 
 
 ![chris on a boat with snorkel mask on](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772446/vis/IMG_20200821_111336_yohalg.jpg "Ready to go snorkeling")
 
-
-
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772451/vis/IMG_20200821_125531_nt1tiy.jpg "Beautiful secluded beach only accessible by boat — we had nice lunch picnic here")
 
 Komiža has a fun little old town that was surprisingly bustling at night, where we tried some wine and of course gelato.
 
 Next, we spent a few nights in the town of Vis at the opposite end of the island (also named Vis). As usual, we checked out the local beaches like Mala Travna.
 
-![chris floating in mala travna beach](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772501/vis/VID_20200823_155216_exported_8313_1602751174220_t6rpzx.jpg "Still can't get over these waters")
+`video: title: "Still can't get over these waters" https://res.cloudinary.com/bctravel/video/upload/v1602801163/vis/floating3_ayskkv.mp4`
 
 ![umbrella and mats on a pebble beach](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772430/vis/IMG_20200823_155005_cdzhuj.jpg "Our beach lounge setup")
 
@@ -47,8 +45,6 @@ Next, we spent a few nights in the town of Vis at the opposite end of the island
 Walking around Vis it felt like a much more laid-back little town than Komiža. They are lots of little restaurants with delicious food and a great view of the sea. We even found a tasty brunch place practically right on the water.
 
 ![toasting shots before a meal](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772410/vis/IMG_20200821_200200_v5iwhu.jpg "Very common to be given a shot of Grappa (brandy) before a meal")
-
-![]()
 
 Probably the most fun and unique experience had to be the quad ATV tour of the island we took. You follow a tour guide around the island to remote locations like former military bases and an abandoned bomb shelter - all while cruising up and down the hillside on ATVs. At each stop the guide explains the interesting history of the island — such as its strategic military importance. We highly recommend this tour if you ever find yourself on Vis.
 
