Update Blog "2020-10-11-vis"

--- a/src/pages/blog/2020-09-20-vis.md
+++ b/src/pages/blog/2020-09-20-vis.md
@@ -24,9 +24,9 @@ Our first stay was in a small apartment in the little town of Komiža, on the we
 
 For dinner, we searched for a well-reviewed nearby konoba (a Croatian tavern-style restaurant) and settled for Konoba & Villa Jastožera. When we got there, Chris thought it looked really familiar and it eventually dawned on her that she'd seen it in Mamma Mia! - turns out it's where they filmed a "Greek tavern" scene. It was a fun first konoba experience as the restaurant sits out over the water and you can watch them as they catch lobsters and pull them from the traps.
 
-![chris sitting at table in tavern style restaurant](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772429/vis/IMG_20200819_190407_mtdyco.jpg)
+![chris sitting at a table in tavern style restaurant ](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772429/vis/IMG_20200819_190407_mtdyco.jpg)
 
-The waters around Vis are beautifully shallow with a number of secluded hard to reach beaches so booked a private boat tour of the surrounding islands. Our tour guide was actually an American originally from California and he exuded an unmistakable "California beach bum" vibe. His boat was a tiny motorboat that kept a much more leisurely pace compared with our previous tour.
+The waters around Vis are beautifully shallow with a number of secluded hard to reach beaches so we booked a private boat tour of the surrounding islands. Our tour guide was actually an American originally from California and he exuded an unmistakable "California beach bum" vibe. His boat was a tiny motorboat that kept a much more leisurely pace compared with our previous tour.
 
 ![chris on a boat with snorkel mask on](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772446/vis/IMG_20200821_111336_yohalg.jpg "Ready to go snorkeling")
 
@@ -57,7 +57,6 @@ Probably the most fun and unique experience had to be the quad ATV tour of the i
 ![bomb shelter stairs](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602799104/vis/VID_20200824_183214_exported_154290_1602769062383-COLLAGE_kc1hn5.jpg "Exploring an abandonded atomic bomb shelter — a relic from the cold war. It's a long way to the top...")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772476/vis/IMG_20200825_121032_p4pfvo.jpg "This cafe used to be a French fort")
-
 
 ![Pritiscina beach selfie](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1602772426/vis/IMG_20200823_154405_dapj5k.jpg "Pritiscina beach — only easily accessible by boat or ATV")
 
